Fix iframe video rezising and whitespaces

--- a/themes/crokmou/static-src/assets/scss/_markdown.scss
+++ b/themes/crokmou/static-src/assets/scss/_markdown.scss
@@ -1,5 +1,8 @@
 .markdown {
   $goldenRatio: 1.333;
+  p, li {
+    word-break: break-word;
+  }
   * + * { margin: 1.3em auto; }
   h1, h2, h3, h4, h5, h6 {
     margin: #{$goldenRatio}em 0 0.5em;
