--- a/themes/crokmou/static-src/assets/scss/pages/_single.scss
+++ b/themes/crokmou/static-src/assets/scss/pages/_single.scss
@@ -55,6 +55,7 @@
       strong { color: $gray-30; }
       ul {
         display: inline-block;
+        margin-left: 0;
         font-size: 0;
         li {
           display: inline-block;
